semantic-analyzer_DEBUG/tests/test_errors1.c
int function() {
    int int a;          // error
    int b = 8;          // error
    writeln("This is a string");
    // This is a comment    
}

int other() {
    int a;
    int a;          // error
}